Update Team.java and footer.jsx